policies/require-nonroot.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-nonroot

spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: validate-nonroot

      match:
        any:
          - resources:
              kinds:
                - Pod

      validate:
        message: "Containers must run as non-root and disallow privilege escalation."

        pattern:
          spec:
            containers:
              - securityContext:
                  runAsNonRoot: true
                  allowPrivilegeEscalation: false
