policies/require-resources.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resources

spec:
  validationFailureAction: Enforce
  background: true

  rules:
    - name: validate-resources

      match:
        any:
          - resources:
              kinds:
                - Pod

      validate:
        message: "Containers must define CPU and memory requests and limits."

        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    cpu: "?*"
                    memory: "?*"
                  limits:
                    cpu: "?*"
                    memory: "?*"
